--- a/www/app/tab/userlist/_userlist.scss
+++ b/www/app/tab/userlist/_userlist.scss
@@ -6,18 +6,22 @@
     width: 100%;
     height: 55px; 
     padding: 5px;
+    padding-right: 85px;
   }  
   .item > a {
     text-decoration: none; 
     color: #000;
+    font-size: 14px;
   }
   .item > a > span {
     padding-left: 3px; 
     color: black;
   }
   .btn-container {
-    float: right; 
     padding: 5px;
+    position: absolute;
+    right: 0px;
+    top: 6px;
   }
   .btn-container .button-small {
     width: 77px;
